Update starship color

--- a/private_dot_config/empty_starship.toml
+++ b/private_dot_config/empty_starship.toml
@@ -1,7 +1,71 @@
-# A minimal left prompt
-format = """$character"""
+format = """
+[░▒▓](#161a1d)\
+[  ](bg:#161a1d fg:#660708)\
+[](bg:#2d3142 fg:#161a1d)\
+$directory\
+[](fg:#2d3142 bg:#bfc0c0)\
+$git_branch\
+$git_status\
+[](fg:#bfc0c0 bg:#465362)\
+$java\
+$nodejs\
+$rust\
+$golang\
+$php\
+[](fg:#465362 bg:#82a3a1)\
+$time\
+[ ](fg:#82a3a1)\
+\n$character"""
 
-add_newline = true
+[directory]
+style = "fg:#e3e5e5 bg:#2d3142"
+format = "[ $path ]($style)"
+truncation_length = 3
+truncation_symbol = "…/"
 
-# move the rest of the prompt to the right
-right_format = """$all"""
+[directory.substitutions]
+"Documents" = "󰈙 "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
+
+[git_branch]
+symbol = ""
+style = "bg:#bfc0c0"
+format = '[[ $symbol $branch ](fg:#2d3142 bg:#bfc0c0)]($style)'
+
+[git_status]
+style = "bg:#bfc0c0"
+format = '[[($all_status$ahead_behind )](fg:#2d3142 bg:#bfc0c0)]($style)'
+
+[nodejs]
+symbol = ""
+style = "bg:#465362"
+format = '[[ $symbol ($version) ](fg:#2d3142 bg:#465362)]($style)'
+
+[rust]
+symbol = ""
+style = "bg:#465362"
+format = '[[ $symbol ($version) ](fg:#2d3142 bg:#465362)]($style)'
+
+[golang]
+symbol = ""
+style = "bg:#465362"
+format = '[[ $symbol ($version) ](fg:#2d3142 bg:#465362)]($style)'
+
+[php]
+symbol = ""
+style = "bg:#465362"
+format = '[[ $symbol ($version) ](fg:#2d3142 bg:#465362)]($style)'
+
+[java]
+symbol = "󰬷"
+style = "bg:#465362"
+format = '[[ $symbol ($version) ](fg:#2d3142 bg:#465362)]($style)'
+
+
+[time]
+disabled = false
+time_format = "%R" # Hour:Minute Format
+style = "bg:#82a3a1"
+format = '[[  $time ](fg:#161a1d bg:#82a3a1)]($style)'
